# playground

./: .gitignore  CMakeLists.txt  README.md  clean.sh
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/beginner_tutorials/launch/: addtwoints.launch  init_chatter.launch  mimicturtle.launch
catkin_ws/src/beginner_tutorials/scripts/: plot_altitude_estimate.py  plot_distance.py
catkin_ws/src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  display_shapes.cpp  listener.cpp  talker.cpp
catkin_ws/src/learning_tf/: CMakeLists.txt  package.xml
catkin_ws/src/learning_tf/launch/: start.demo.launch
catkin_ws/src/learning_tf/src/: frame_tf_broadcaster.cpp  turtle_tf_broadcaster.cpp  turtle_tf_listener.cpp
catkin_ws/src/python_pkg/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/smach_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/smach_tutorials/scripts/: state_machine_simple.py
cmake_project/: CMakeLists.txt  README.md
cmake_project/cmake/Modules/: project-config.cmake.in
cmake_project/include/cmake_project/common/: my_template_class.h
cmake_project/src/: CMakeLists.txt  displayWebcam.cpp  getWorkTime.cpp  number_of_elements.cpp
cmake_project/src/common/: helper_functions.cpp
cmake_project/src/nodes/: CMakeLists.txt
cmake_project/src/nodes/ArucoExample/: ArucoExample.cpp  CMakeLists.txt
cmake_project/src/nodes/DisplayWebcam/: CMakeLists.txt  displayWebcam.cpp
cmake_project/src/nodes/Fibonacci/: CMakeLists.txt  fibonacci.cpp
cmake_project/src/nodes/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
cmake_project/src/nodes/NumberOfElements/: CMakeLists.txt  number_of_elements.cpp
cmake_project/src/nodes/ReadArrowKeys/: CMakeLists.txt  read_arrow_keys.cpp
cmake_project/src/nodes/SaveImage/: CMakeLists.txt  SaveImage.cpp
cmake_project/src/nodes/SortNums/: CMakeLists.txt  sortNums.cpp
cmake_project/src/nodes/WorkTime/: CMakeLists.txt
include/: helper_functions.h
learning_docker/: README.md
learning_docker/compile_host_code/: README.md
learning_docker/compile_host_code/dockerfiles/: docker-compose.yml  dockerfile
learning_docker/compile_host_code/src/: fibonacci.cpp
learning_docker/gui_inside_container/: dockerfile
machine_learning/python-logistic-regression-ex/: Logistic_Regression_with_a_Neural_Network_mindset_v6a.ipynb  cat_detector_logistic_regression.py
scripts/: Bezier_curves.py  ManipulateCSVFile.py  README.md  array_lists.py  category_analysis.py  create_url.py  detect_ball.py  execute_sam2.py  main_python.py  matplotlib_example.py  open_four_terminals.sh  ros_python_template.py  scrape_website.py  send_sms.py  send_trajectory_test.py  test_csv_argparser.py  test_matplotlib.py  test_shell.sh  weight_lifting_tracker.py
scripts/stable-diffusion/: generate.py  requirements.txt
src/: HelloWorld.cpp  helper_functions.cpp  read_arrow_keys.cpp  ros_cpp_template.cpp  sortNums.cpp
test_files/: csvtest.csv
test_files/weight_records/: deads.csv  squat.csv
